# SENGINE2

./: CMakeLists.txt
dependencies/: components.hpp
dependencies/glad/: glad.h
src/: Engine.cpp  Engine.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  TriangleMesh.cpp  TriangleMesh.h  Window.cpp  Window.h  components.hpp  config.h  glad.c  main.cpp
src/components/: ModelComponent.cpp  ModelComponent.h
src/shaders/: fragment.frag  vertex.vert
